# FireFly

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  readthedocs.yaml
backend/: .gitignore  backend.dockerfile  celeryworker.dockerfile  gunicorn_conf.py  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: cd250a026c89_initial.py
backend/scripts/: ci_cd_run_auto_tests.py  prestart.sh  start-reload.sh  start.sh  worker-start.sh
backend/src/: initial_data.py  main.py  tasks.py
backend/src/api/: api.py  deps.py
backend/src/api/endpoints/: health.py  load_test_runner.py  login.py  script_runner.py  test_runner.py  users.py
backend/src/cache/: __init__.py  base.py  base_collected_cache.py  base_event_manager.py  base_path_cache.py  connection.py  converter.py
backend/src/cache/auto_test/: auto_test_cache.py  auto_test_history.py  auto_test_history_groups.py  auto_test_history_stages.py  auto_test_paths.py  auto_test_tags.py  pending_runs.py  test_run.py
backend/src/cache/load_test/: charts.py  current.py  internal_event_channel.py  (+6 more)
backend/src/clients/: click_house_client.py  db_client.py  graph_ql_client.py  kafka_client.py
backend/src/core/: celery_app.py  config.py  security.py
backend/src/crud/: __init__.py  base.py  user.py
backend/src/db/: base.py  base_class.py  init_db.py  session.py
backend/src/models/: __init__.py  user.py
backend/src/modules/: base_collector.py
backend/src/schemas/: __init__.py  common.py  environment.py  user.py
backend/src/utils/: assertions.py  async_iterator_utils.py  compare_pydantic_models.py  date_utils.py  dict_utils.py  dynamic_form.py  enum_extension.py  extract_text_from_html.py  flatten_dict.py  format.py  gather_utils.py  hash_funcs.py  jwt_gen.py  list_utils.py  pydantic_helper.py  random_info.py  rate_limiter.py  string_utils.py
(+357 files in other folders)
